--- a/install.html
+++ b/install.html
@@ -27,64 +27,134 @@
 <a href="docs/">Documentation</a>
 </li>
 <li>
-<a href="https://github.com/caltechlibrary/eprinttools">Github</a>
+<a
+href="https://github.com/caltechlibrary/eprinttools">Github</a>
 </li>
 <li>
-<a href="https://github.com/caltechlibrary/eprinttools/releases/latest">Releases</a>
+<a
+href="https://github.com/caltechlibrary/eprinttools/releases/latest">Releases</a>
 </li>
 </ul>
 </nav>
 
 <section>
-<h1>
+<h1 id="installation">
 Installation
 </h1>
 <p>
-<em>eputil</em>, <em>epfmt</em>, <em>doi2eprintxml</em> are command line programs run from a shell like Bash. <em>ep2apid</em> is a web service that can also be run from the command line or setup as a “daemon” and run from systemd. They allow you to harvest, work with EPrint repository content, and import content from CrossRef and DataCite.
+<em>eputil</em>, <em>epfmt</em>, <em>doi2eprintxml</em> are command line
+programs run from a shell like Bash. <em>ep2apid</em> is a web service
+that can also be run from the command line or setup as a “daemon” and
+run from systemd. They allow you to harvest, work with EPrint repository
+content, and import content from CrossRef and DataCite.
 </p>
 <p>
 Below are generalized instructions for installation of a release.
 </p>
-<h2>
+<h2 id="compiled-version">
 Compiled version
 </h2>
 <p>
-Compiled versions are available for Mac OS X (amd64 and M1 processor, macos-amd64, macos-arm64), Linux (amd64 process, linux-amd64), Windows (amd64 processor, windows-amd64) and Rapsberry Pi (arm7 processor, raspbian-arm7)
+Compiled versions are available for Mac OS X (amd64 and M1 processor,
+macos-amd64, macos-arm64), Linux (amd64 process, linux-amd64), Windows
+(amd64 processor, windows-amd64) and Rapsberry Pi (arm7 processor,
+raspbian-arm7)
 </p>
 <p>
-VERSION_NUMBER is a <a href="http://semver.org/">symantic version number</a> (e.g. <code>v1.0.3</code>)
+VERSION_NUMBER is a <a href="http://semver.org/">symantic version
+number</a> (e.g. <code>v1.0.3</code>)
 </p>
 <p>
-For all the released version go to the project page on Github and click latest release
+For all the released version go to the project page on Github and click
+latest release
 </p>
 <blockquote>
 <p>
-<a href="https://github.com/caltechlibrary/eprinttools/releases/latest">https://github.com/caltechlibrary/eprinttools/releases/latest</a>
+<a
+href="https://github.com/caltechlibrary/eprinttools/releases/latest"
+class="uri">https://github.com/caltechlibrary/eprinttools/releases/latest</a>
 </p>
 </blockquote>
-<p>
-<div class="line-block">Platform | Zip Filename | |————-|———————————————-| | Windows | eprinttools-VERSION_NUMBER-windows-amd64.zip | | macOS | eprinttools-VERSION_NUMBER-macos-amd64.zip | | macOS | eprinttools-VERSION_NUMBER-macos-arm64.zip | | Linux/Intel | eprinttools-VERSION_NUMBER-linux-amd64.zip | | Raspbery Pi | eprinttools-VERSION_NUMBER-raspbian-os-arm7.zip |</div>
-<h2>
+<table>
+<thead>
+<tr class="header">
+<th>
+Platform
+</th>
+<th>
+Zip Filename
+</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>
+Windows
+</td>
+<td>
+eprinttools-VERSION_NUMBER-windows-amd64.zip
+</td>
+</tr>
+<tr class="even">
+<td>
+macOS
+</td>
+<td>
+eprinttools-VERSION_NUMBER-macos-amd64.zip
+</td>
+</tr>
+<tr class="odd">
+<td>
+macOS
+</td>
+<td>
+eprinttools-VERSION_NUMBER-macos-arm64.zip
+</td>
+</tr>
+<tr class="even">
+<td>
+Linux/Intel
+</td>
+<td>
+eprinttools-VERSION_NUMBER-linux-amd64.zip
+</td>
+</tr>
+<tr class="odd">
+<td>
+Raspbery Pi
+</td>
+<td>
+eprinttools-VERSION_NUMBER-raspbian-os-arm7.zip
+</td>
+</tr>
+</tbody>
+</table>
+<h2 id="the-basic-recipe">
 The basic recipe
 </h2>
 <ul>
 <li>
-Find the Zip file listed matching the architecture you’re running and download it - (e.g. if you’re on a Windows 10 laptop/Surface with a amd64 style CPU you’d choose the Zip file with “windows-amd64” in the name).
+Find the Zip file listed matching the architecture you’re running and
+download it - (e.g. if you’re on a Windows 10 laptop/Surface with a
+amd64 style CPU you’d choose the Zip file with “windows-amd64” in the
+name).
 </li>
 <li>
 Download the zip file and unzip the file.
 </li>
 <li>
-Copy the contents of the folder named “bin” to a folder that is in your path - (e.g. “$HOME/bin” is common).
+Copy the contents of the folder named “bin” to a folder that is in your
+path - (e.g. “$HOME/bin” is common).
 </li>
 <li>
-Adjust your PATH if needed - (e.g. <code>export PATH=“$HOME/bin:$PATH”</code>)
+Adjust your PATH if needed - (e.g. <code>export
+PATH=“$HOME/bin:$PATH”</code>)
 </li>
 <li>
 Test
 </li>
 </ul>
-<h3>
+<h3 id="mac-os-x">
 Mac OS X
 </h3>
 <ol type="1">
@@ -105,7 +175,8 @@ Test
 </li>
 </ol>
 <p>
-Here’s an example of the commands run in the Terminal App after downloading the zip file.
+Here’s an example of the commands run in the Terminal App after
+downloading the zip file.
 </p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-macos-amd64.zip
@@ -113,7 +184,7 @@ Here’s an example of the commands run in the Terminal App after downloading th
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
     eputil -version</code></pre>
-<h3>
+<h3 id="windows">
 Windows
 </h3>
 <ol type="1">
@@ -131,7 +202,8 @@ Test
 </li>
 </ol>
 <p>
-Here’s an example of the commands run in from the Bash shell on Windows 10 after downloading the zip file.
+Here’s an example of the commands run in from the Bash shell on Windows
+10 after downloading the zip file.
 </p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-windows-amd64.zip
@@ -139,7 +211,7 @@ Here’s an example of the commands run in from the Bash shell on Windows 10 aft
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
     eputil -version</code></pre>
-<h3>
+<h3 id="linux">
 Linux
 </h3>
 <ol type="1">
@@ -157,7 +229,8 @@ Test
 </li>
 </ol>
 <p>
-Here’s an example of the commands run in from the Bash shell after downloading the zip file.
+Here’s an example of the commands run in from the Bash shell after
+downloading the zip file.
 </p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-linux-amd64.zip
@@ -165,11 +238,12 @@ Here’s an example of the commands run in from the Bash shell after downloading
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
     eputil -version</code></pre>
-<h3>
+<h3 id="raspberry-pi">
 Raspberry Pi
 </h3>
 <p>
-Released version is for a Raspberry Pi 2 or later use (i.e. requires ARM 7 support).
+Released version is for a Raspberry Pi 2 or later use (i.e. requires ARM
+7 support).
 </p>
 <ol type="1">
 <li>
@@ -186,7 +260,8 @@ Test
 </li>
 </ol>
 <p>
-Here’s an example of the commands run in from the Bash shell after downloading the zip file.
+Here’s an example of the commands run in from the Bash shell after
+downloading the zip file.
 </p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-raspbian-arm7.zip
@@ -194,11 +269,13 @@ Here’s an example of the commands run in from the Bash shell after downloading
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
     eputil -version</code></pre>
-<h2>
+<h2 id="compiling-from-source">
 Compiling from source
 </h2>
 <p>
-<em>eprinttools</em> is “go gettable”. Use the “go get” command to download the dependant packages as well as <em>eprinttools</em>’s source code.
+<em>eprinttools</em> is “go gettable”. Use the “go get” command to
+download the dependant packages as well as <em>eprinttools</em>’s source
+code.
 </p>
 <pre class="shell"><code>    go get -u github.com/caltechlibrary/eprinttools/...</code></pre>
 <p>
